// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RoomStatusBar connectivity lost bar connectivity lost bar has priority over the timeline refresh bar 1`] = `
<DocumentFragment>
  <div
    class="mx_RoomStatusBar"
  >
    <div
      role="alert"
    >
      <div
        class="mx_RoomStatusBar_connectionLostBar"
      >
        <img
          alt=""
          height="24"
          src="image-file-stub"
          width="24"
        />
        <div>
          <div
            class="mx_RoomStatusBar_connectionLostBar_title"
          >
            Connectivity to the server has been lost.
          </div>
          <div
            class="mx_RoomStatusBar_connectionLostBar_desc"
          >
            Sent messages will be stored until your connection has returned.
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RoomStatusBar connectivity lost bar should show connection lost bar when sync has an error 1`] = `
<DocumentFragment>
  <div
    class="mx_RoomStatusBar"
  >
    <div
      role="alert"
    >
      <div
        class="mx_RoomStatusBar_connectionLostBar"
      >
        <img
          alt=""
          height="24"
          src="image-file-stub"
          width="24"
        />
        <div>
          <div
            class="mx_RoomStatusBar_connectionLostBar_title"
          >
            Connectivity to the server has been lost.
          </div>
          <div
            class="mx_RoomStatusBar_connectionLostBar_desc"
          >
            Sent messages will be stored until your connection has returned.
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RoomStatusBar does not show anything when no sync error or other status 1`] = `<DocumentFragment />`;

exports[`RoomStatusBar timeline needs refresh bar (history import) should show timeline refresh bar when history import detected 1`] = `
<DocumentFragment>
  <div
    class="mx_RoomStatusBar mx_RoomStatusBar_unsentMessages"
    data-testid="historical-import-detected-status-bar"
  >
    <div
      role="alert"
    >
      <div
        class="mx_RoomStatusBar_unsentBadge"
      >
        <img
          alt=""
          height="24"
          src="image-file-stub"
          width="24"
        />
      </div>
      <div>
        <div
          class="mx_RoomStatusBar_unsentTitle"
        >
          History import detected.
        </div>
        <div
          class="mx_RoomStatusBar_unsentDescription"
        >
          History was just imported somewhere in the room. In order to see the historical messages, refresh your timeline.
        </div>
      </div>
      <div
        class="mx_RoomStatusBar_unsentButtonBar"
      >
        <div
          class="mx_AccessibleButton mx_RoomStatusBar_refreshTimelineBtn"
          data-testid="refresh-timeline-button"
          role="button"
          tabindex="0"
        >
          Refresh timeline
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
